--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -12,18 +12,26 @@
   <%- include('partials/_header') %>
   <main style="margin: 1em;">
     <h3>My URLs</h3>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Short URL</th>
-          <th scope="col">Long URL</th>
+    <table class="table table-bordered table-hover">
+      <caption>List of shortened URLs and their corresponding long URLs.</caption>
+      <colgroup>
+      <thead class="thead-dark">
+        <tr style="text-align:center">
+          <th class="col-4" scope="col">Short URL</th>
+          <th class="col-6" scope="col">Long URL</th>
+          <th class="col-2" scope="col"></th>
         </tr>
       </thead>
       <tbody>
         <% for(let url in urls) { %>
-          <tr>
+          <tr style="text-align:center">
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td>
+              <form method="POST" action="/urls/<%= url %>/delete">
+                <button type="submit" class="btn btn-danger">Delete</button>
+              </form>
+            </td>
           </tr>
         <% } %>
       </tbody>
