--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,8 +17,9 @@
       <colgroup>
       <thead class="thead-dark">
         <tr style="text-align:center">
-          <th class="col-4" scope="col">Short URL</th>
-          <th class="col-6" scope="col">Long URL</th>
+          <th class="col-3" scope="col">Short URL</th>
+          <th class="col-5" scope="col">Long URL</th>
+          <th class="col-2" scope="col">Edit</th>
           <th class="col-2" scope="col"></th>
         </tr>
       </thead>
@@ -27,6 +28,10 @@
           <tr style="text-align:center">
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td>
+              
+              <a href="/urls/<%= url %>">Edit</a>
+            </td>
             <td>
               <form method="POST" action="/urls/<%= url %>/delete">
                 <button type="submit" class="btn btn-danger">Delete</button>
