--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -11,12 +11,19 @@
   <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL <%= shortURL %></h5>
-        <form class="form-inline" action="/urls" method="POST">
-          <%- include('partials/_longURLForm') %>
-        </form>
+        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
-    <div class="card-footer text-muted"></div>
+    <div class="card-footer text-muted">
+      <div class="container">
+        <h3>Edit</h5>
+        <div class="row justify-content-center">
+          <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
+            <%- include('partials/_longURLForm') %>
+          </form>
+        </div>
+      </div>
+    </div>
   </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
