--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -13,7 +13,7 @@
   <main style="margin: 1em;">
     <h3>My URLs</h3>
     <table class="table table-bordered table-hover">
-      <caption>List of shortened URLs and their corresponding long URLs.</caption>
+      <caption>Shortened URLs and their corresponding long URLs.</caption>
       <colgroup>
       <thead class="thead-dark">
         <tr style="text-align:center">
@@ -26,15 +26,15 @@
       <tbody>
         <% for(let url in urls) { %>
           <tr style="text-align:center">
-            <td><%= url %></td>
-            <td><%= urls[url] %></td>
-            <td>
+            <td class="align-middle"><%= url %></td>
+            <td class="align-middle"><%= urls[url] %></td>
+            <td class="align-middle">
               
               <a href="/urls/<%= url %>">Edit</a>
             </td>
-            <td>
+            <td class="align-middle">
               <form method="POST" action="/urls/<%= url %>/delete">
-                <button type="submit" class="btn btn-danger">Delete</button>
+                <button type="submit" class="btn btn-danger btn-sm">Delete</button>
               </form>
             </td>
           </tr>
