--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,5 +10,12 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <form class="form-inline" action="/login" method="POST">
+      <div class="form-group">
+        <label class="text-light mr-2" for="username">Login: </label>
+        <input class="form-control form-control-sm mr-2" type="text" placeholder="Enter your username">
+        <button type="submit" class="btn btn-outline-light btn-sm">Submit</button>
+      </div>
+    </form>
   </nav>
 </header>
