--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -13,7 +13,7 @@
     <form class="form-inline" action="/login" method="POST">
       <div class="form-group">
         <label class="text-light mr-2" for="username">Login: </label>
-        <input class="form-control form-control-sm mr-2" type="text" placeholder="Enter your username">
+        <input class="form-control form-control-sm mr-2" type="text" placeholder="Enter your username" name="username">
         <button type="submit" class="btn btn-outline-light btn-sm">Submit</button>
       </div>
     </form>
