--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,7 +9,7 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-      <!-- TODO - add conditional to hide login form and show "Logged in as USER" if user is logged in -->
+      <!-- if user is logged in, show their username and hide login form -->
       <% if (typeof(username) !== 'undefined') { %>
         <form class="form-inline" action="/logout" method="POST">
           <div class="form-group">
@@ -18,6 +18,7 @@
             <button type="submit" class="btn btn-outline-light ml-4 btn-sm">Logout</button>
           </div>
         </form>
+        <!-- otherwise, show the login form -->
       <% } else { %>  
         <form class="form-inline" action="/login" method="POST">
           <div class="form-group">
@@ -28,6 +29,5 @@
         </form>
       <% } %>
     </div>
-    
   </nav>
 </header>
