--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -4,27 +4,27 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+    
     <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <!-- if user is logged in, show their username and hide login form -->
-      <% if (typeof(username) !== 'undefined') { %>
+      <% if (!username) { %>
+        <form class="form-inline" action="/login" method="POST">
+          <div class="form-group">
+            <input class="form-control form-control-sm" type="text" placeholder="Username" name="username">
+            <button type="submit" class="btn btn-outline-light ml-2 btn-sm">Login</button>
+          </div>
+        </form>
+        <!-- otherwise, show the login form -->
+      <% } else { %>  
         <form class="form-inline" action="/logout" method="POST">
           <div class="form-group">
             <label class="text-light mr-2" for="username">Logged in as: </label>
             <p class="text-light mb-0" name="username"><strong><%= username %></strong></p>
             <button type="submit" class="btn btn-outline-light ml-4 btn-sm">Logout</button>
-          </div>
-        </form>
-        <!-- otherwise, show the login form -->
-      <% } else { %>  
-        <form class="form-inline" action="/login" method="POST">
-          <div class="form-group">
-              <label class="text-light mr-2" for="username">Login: </label>
-              <input class="form-control form-control-sm" type="text" placeholder="Enter your username" name="username">
-              <button type="submit" class="btn btn-outline-light ml-2 btn-sm">Submit</button>
           </div>
         </form>
       <% } %>
