--- a/views/register_new_user.ejs
+++ b/views/register_new_user.ejs
@@ -11,9 +11,9 @@
   <%- include('partials/_header') %>
   <main style="margin: 1em;">
     <form action="/register" method="POST">
-      <input class="form-control" type="email" name="email" placeholder="example@email.com">
-      <input class="form-control" type="password" name="password">
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <input class="form-control" type="email" name="email" placeholder="example@email.com" style="width: 300px; margin: 1em">
+      <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
+      <button type="submit" class="btn btn-primary" style="margin: 1em">Submit</button>
     </form>
   </main>
   <!-- Bootstrap JS -->
