--- a/views/register_new_user.ejs
+++ b/views/register_new_user.ejs
@@ -10,11 +10,26 @@
 <body>
   <%- include('partials/_header') %>
   <main style="margin: 1em;">
-    <form action="/register" method="POST">
-      <input class="form-control" type="email" name="email" placeholder="example@email.com" style="width: 300px; margin: 1em">
-      <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
-      <button type="submit" class="btn btn-primary" style="margin: 1em">Submit</button>
-    </form>
+    <div class="row justify-content-center mb-0">
+      <form action="/register" method="POST">
+        <fieldset class="">
+          <div class="row justify-content-center">
+            <legend style="width:fit-content">Register your account</legend>
+          </div>
+          <div class="form-inline row justify-content-end">
+            <label for="email">Email: </label>
+            <input class="form-control" type="email" name="email" placeholder="example@email.com" style="width: 300px; margin: 1em">
+          </div>
+          <div class="form-inline row justify-content-end">
+            <label for="password">Password: </label>
+            <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
+          </div>
+          <div class="row justify-content-center">
+            <button type="submit" class="btn btn-primary" style="margin: 1em">Submit</button>
+          </div>
+        </fieldset>
+      </form>
+    </div>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
