--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,11 +10,11 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <!-- if user is logged in, show their username and hide login form -->
-      <% if (typeof(username) !== 'undefined') { %>
+      <% if (typeof(user) !== 'undefined') { %>
         <form class="form-inline" action="/logout" method="POST">
           <div class="form-group">
             <label class="text-light mr-2" for="username">Logged in as: </label>
-            <p class="text-light mb-0" name="username"><strong><%= username %></strong></p>
+            <p class="text-light mb-0" name="username"><strong><%= user.email %></strong></p>
             <button type="submit" class="btn btn-outline-light ml-4 btn-sm">Logout</button>
           </div>
         </form>
