--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -23,7 +23,7 @@
         <form class="form-inline" action="/login" method="POST">
           <div class="form-group">
             <input class="form-control form-control-sm" type="text" placeholder="Username" name="username">
-            <!-- TODO: make login button part of the text field-->
+            <!-- TODO: make login button part of the text field following https://getbootstrap.com/docs/4.2/components/input-group/-->
             <button type="submit" class="btn btn-outline-light ml-2 btn-sm">Login</button>
           </div>
         </form>
