added bottom margin to header

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,8 +10,8 @@
 </head>
 <body>
   <%- include('partials/_header') %>
-  <main style="margin: 1em;">
-    <h3>My URLs</h3>
+  <main class="mx-5">
+    <h3 class="mb-3">My URLs</h3>
     <table class="table table-bordered table-hover">
       <caption>Shortened URLs and their corresponding long URLs.</caption>
       <colgroup>
