--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,4 @@
-<header>
+<header class="mb-5" style="box-shadow: 0 1rem 0.9rem grey">
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,10 +21,12 @@
         <!-- otherwise, show the login form -->
       <% } else { %>  
         <form class="form-inline" action="/login" method="POST">
-          <div class="form-group">
-            <input class="form-control form-control-sm" type="text" placeholder="Username" name="username">
-            <!-- TODO: make login button part of the text field following https://getbootstrap.com/docs/4.2/components/input-group/-->
-            <button type="submit" class="btn btn-outline-light ml-2 btn-sm">Login</button>
+          <div class="input-group">
+            <input class="form-control form-control-sm" aria-describedby="button-addon2" type="text" placeholder="Username" name="username">
+            <!-- TODO: make login button part of the text field following -->
+            <div class="input-group-append">
+              <button type="submit" class="btn btn-outline-light btn-sm" id="submit-button">Login</button>
+            </div>
           </div>
         </form>
       <% } %>
