--- a/views/register_new_user.ejs
+++ b/views/register_new_user.ejs
@@ -18,11 +18,11 @@
           </div>
           <div class="form-inline row justify-content-end">
             <label for="email">Email: </label>
-            <input class="form-control" type="email" name="email" placeholder="example@email.com" style="width: 300px; margin: 1em">
+            <input class="form-control" type="email" name="email" placeholder="email@domain.com" style="width: 300px; margin: 1em">
           </div>
           <div class="form-inline row justify-content-end">
             <label for="password">Password: </label>
-            <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
+            <input class="form-control" type="password" name="password" placeholder="********" style="width: 300px; margin: 1em">
           </div>
           <div class="row justify-content-center">
             <button type="submit" class="btn btn-primary" style="margin: 1em">Submit</button>
