--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,11 +19,21 @@
           </div>
           <div class="form-inline row justify-content-end">
             <label for="email">Email: </label>
-            <input class="form-control" type="email" name="email" placeholder="email@domain.com" style="width: 300px; margin: 1em">
+            <div name="emailBlock">
+              <input class="form-control mb-0" type="email" name="email" placeholder="email@domain.com" style="width: 300px; margin: 1em">
+            <small id="emailHelpBlock" class="form-text text-muted" style="margin-left: 1.75rem">
+              Must enter a valid email address.
+            </small>
+            </div>
           </div>
           <div class="form-inline row justify-content-end">
-            <label for="password">Password: </label>
-            <input class="form-control" type="password" name="password" placeholder="********" style="width: 300px; margin: 1em">
+            <label for="passwordBlock">Password: </label>
+            <div name="passwordBlock">
+              <input class="form-control mb-0" type="password" name="password" placeholder="********" style="width: 300px; margin: 1em">
+              <small id="passwordHelpBlock" class="form-text text-muted" style="margin-left: 1.75rem">
+                Your password must be 8-20 characters long.
+              </small>
+            </div>
           </div>
           <div class="row justify-content-center">
             <button type="submit" class="btn btn-primary" style="margin: 1em">Submit</button>
