--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,7 +12,7 @@
           <button type="submit" class="btn btn-outline-light ml-4 btn-sm">COOKIE MONSTER</button>
         </form>
       </div>
-      <!-- if user is logged in, show their username and hide login form -->
+      <!-- if user is logged in, show their email and hide login form -->
       <% if (typeof(user) !== 'undefined') { %>
         <p class="text-light mb-0 mr-2">Logged in as <%= user.email %></p>
         <!-- otherwise, show the login form -->
