--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -24,14 +24,15 @@
         </tr>
       </thead>
       <tbody>
+        <% const regex = new RegExp('(https?):\/\/(w{3}?\.?)') %>
         <% for(let url in urls) { %>
+          <% const longURL = urls[url].longURL %>
+          <% const res = regex.exec(longURL) %>
+          <%  %>  
           <tr style="text-align:center">
             <td class="align-middle"><%= url %></td>
-            <td class="align-middle"><%= urls[url] %></td>
-            <td class="align-middle">
-              
-              <a href="/urls/<%= url %>">Edit</a>
-            </td>
+            <td class="align-middle"><a href="<%= longURL %>"><%= longURL.substring(res[0].length) %></a></td>
+            <td class="align-middle"><a href="/urls/<%= url %>">Edit</a></td>
             <td class="align-middle">
               <form method="POST" action="/urls/<%= url %>/delete">
                 <button type="submit" class="btn btn-danger btn-sm">Delete</button>
