--- a/views/register_new_user.ejs
+++ b/views/register_new_user.ejs
@@ -25,7 +25,7 @@
             <input class="form-control" type="password" name="password" placeholder="********" style="width: 300px; margin: 1em">
           </div>
           <div class="row justify-content-center">
-            <button type="submit" class="btn btn-primary" style="margin: 1em">Submit</button>
+            <button type="submit" class="btn btn-primary" style="margin: 1em">Register</button>
           </div>
         </fieldset>
       </form>
