--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -24,17 +24,19 @@
         </tr>
       </thead>
       <tbody>
-        <% const regex = new RegExp('(https?):\/\/(w{3}?\.?)') %>
+        <% const regex = new RegExp('(https?|):\/\/(w{3}?.|)') %>
         <% for(const url of urls) { %>
-          <!-- 'url' is an array with two elements -- url[0] is the shortURL and url[1] has keys 'longURL' and 'userID'-->
           <% const shortURL = url[0] %> 
           <% const longURL = url[1]['longURL'] %>
           <% const res = regex.exec(longURL) %>
-          <%  %>  
           <tr style="text-align:center">
             <td class="align-middle"><%= shortURL %></td>
-            <td class="align-middle"><a href="<%= longURL %>"><%= longURL.substring(res[0].length) %></a></td>
-            <td class="align-middle"><a href="/urls/<%= url %>">Edit</a></td>
+            <% if (res === null) { %>
+              <td class="align-middle"><a href="<%= longURL %>"><%= longURL %></a></td>
+            <% } else { %>
+              <td class="align-middle"><a href="<%= longURL %>"><%= longURL.substring(res[0].length) %></a></td>
+            <% } %>
+            <td class="align-middle"><a href="/urls/<%= shortURL %>">Edit</a></td>
             <td class="align-middle">
               <form method="POST" action="/urls/<%= url %>/delete">
                 <button type="submit" class="btn btn-danger btn-sm">Delete</button>
