--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -29,12 +29,12 @@
           <% const shortURL = url[0] %> 
           <% const longURL = url[1]['longURL'] %>
           <% const res = regex.exec(longURL) %>
-          <tr style="text-align:center">
-            <td class="align-middle"><%= shortURL %></td>
+          <tr>
+            <td><span style="color:darkgray">localhost:8080/u/</span><strong><%= shortURL %></strong></td>
             <% if (res === null) { %>
-              <td class="align-middle"><a href="<%= longURL %>"><%= longURL %></a></td>
+              <td><a class="text-center" href="<%= longURL %>"><%= longURL %></a></td>
             <% } else { %>
-              <td class="align-middle"><a href="<%= longURL %>"><%= longURL.substring(res[0].length) %></a></td>
+              <td><a class="text-center" href="<%= longURL %>"><%= longURL.substring(res[0].length) %></a></td>
             <% } %>
             <td class="align-middle"><a href="/urls/<%= shortURL %>">Edit</a></td>
             <td class="align-middle">
