--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -16,7 +16,7 @@
       <caption>Shortened URLs and their corresponding long URLs.</caption>
       <colgroup>
       <thead class="thead-dark">
-        <tr style="text-align:center">
+        <tr class="text-center">
           <th class="col-3" scope="col">Short URL</th>
           <th class="col-5" scope="col">Long URL</th>
           <th class="col-2" scope="col">Edit</th>
@@ -30,12 +30,18 @@
           <% const longURL = url[1]['longURL'] %>
           <% const res = regex.exec(longURL) %>
           <tr>
-            <td><span style="color:darkgray">localhost:8080/u/</span><strong><%= shortURL %></strong></td>
-            <% if (res === null) { %>
-              <td><a class="text-center" href="<%= longURL %>"><%= longURL %></a></td>
-            <% } else { %>
-              <td><a class="text-center" href="<%= longURL %>"><%= longURL.substring(res[0].length) %></a></td>
-            <% } %>
+            <td class="align-middle">
+              <span class="mr-3" style="color:darkgray">localhost:8080/u/</span><strong><%= shortURL %></strong>
+            </td>
+            <td class="align-middle text-center">
+              <a href="<%= longURL %>">
+              <% if (res === null) { %>
+                <%= longURL %>
+              <% } else { %>
+                <%= longURL.substring(res[0].length) %>
+              <% } %>
+              </a>
+            </td>
             <td class="align-middle"><a href="/urls/<%= shortURL %>">Edit</a></td>
             <td class="align-middle">
               <form method="POST" action="/urls/<%= url %>/delete">
