--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,36 +11,42 @@
 <body>
   <main>
     <%- include('partials/_header') %>
-    <div class="row justify-content-center mb-0">
-      <form action="/login" method="POST">
-        <fieldset class="">
-          <div class="row justify-content-center">
-            <legend style="width:fit-content">Log in to your account</legend>
-          </div>
-          <div class="form-inline row justify-content-end">
-            <label for="email">Email: </label>
-            <div name="emailBlock">
-              <input class="form-control mb-0" type="email" name="email" placeholder="email@domain.com" style="width: 300px; margin: 1em">
-            <small id="emailHelpBlock" class="form-text text-muted" style="margin-left: 1.75rem">
-              Must enter a valid email address.
-            </small>
-            </div>
-          </div>
-          <div class="form-inline row justify-content-end">
-            <label for="passwordBlock">Password: </label>
-            <div name="passwordBlock">
-              <input class="form-control mb-0" type="password" name="password" placeholder="********" style="width: 300px; margin: 1em">
-              <small id="passwordHelpBlock" class="form-text text-muted" style="margin-left: 1.75rem">
-                Your password must be 8-20 characters long.
-              </small>
-            </div>
-          </div>
-          <div class="row justify-content-center">
-            <button type="submit" class="btn btn-primary" style="margin: 1em">Submit</button>
-          </div>
-        </fieldset>
-      </form>
+    <div class="card">
+      <div class="card-header">
+        <legend class="display-4 my-2 text-center">Log in to your account</legend>
+      </div>
+      <div class="card-body">
+        <div class="row justify-content-center my-3">
+          <form action="/login" method="POST">
+            <fieldset class="">
+              <div class="form-inline row justify-content-end">
+                <label for="email">Email: </label>
+                <div name="emailBlock">
+                  <input class="form-control mb-0" type="email" name="email" placeholder="email@domain.com" style="width: 300px; margin: 1em">
+                <small id="emailHelpBlock" class="form-text text-muted" style="margin-left: 1.75rem">
+                  Must enter a valid email address.
+                </small>
+                </div>
+              </div>
+              <div class="form-inline row justify-content-end">
+                <label for="passwordBlock">Password: </label>
+                <div name="passwordBlock">
+                  <input class="form-control mb-0" type="password" name="password" placeholder="********" style="width: 300px; margin: 1em">
+                  <small id="passwordHelpBlock" class="form-text text-muted" style="margin-left: 1.75rem">
+                    Your password must be 8-20 characters long.
+                  </small>
+                </div>
+              </div>
+              <div class="row justify-content-center">
+                <button type="submit" class="btn btn-primary" style="margin: 1em">Submit</button>
+              </div>
+            </fieldset>
+          </form>
+        </div>
+      </div>
+      
     </div>
+    
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
