--- a/views/partials/_longURLForm.ejs
+++ b/views/partials/_longURLForm.ejs
@@ -1,5 +1,13 @@
-<div class="form-group mb-2">
-  <label for="longURL">Enter a URL:</label>
-  <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
-  <button type="submit" class="btn btn-primary">Submit</button>
+<div class="form-group">
+  
+
+  <% if (typeof(longURL) === 'undefined') { %>
+    <input class="form-control text-center" type="text" name="longURL" value="http://" style="width: 300px; margin: 1em">
+    <button type="submit" class="btn btn-primary">Shorten</button>
+  <% } else { %>          
+    <input class="form-control text-center" type="text" name="longURL" value="<%= longURL %>" style="width: 300px; margin: 1em">
+    <div class="">
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+  <% } %>
 </div>
