--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,48 +10,59 @@
 </head>
 <body>
   <%- include('partials/_header') %>
-  <main class="mx-5">
-    <h3 class="mb-3">My URLs</h3>
-    <table class="table table-bordered table-hover">
-      <caption>Shortened URLs and their corresponding long URLs.</caption>
-      <colgroup>
-      <thead class="thead-dark">
-        <tr class="text-center">
-          <th class="col-3" scope="col">Short URL</th>
-          <th class="col-5" scope="col">Long URL</th>
-          <th class="col-2" scope="col">Edit</th>
-          <th class="col-2" scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% const regex = new RegExp('(https?|):\/\/(w{3}?.|)') %>
-        <% for(const url of urls) { %>
-          <% const shortURL = url[0] %> 
-          <% const longURL = url[1]['longURL'] %>
-          <% const res = regex.exec(longURL) %>
-          <tr>
-            <td class="align-middle">
-              <span class="ml-3 mr-3" style="color:darkgray">localhost:8080/u/</span><strong><%= shortURL %></strong>
-            </td>
-            <td class="align-middle text-center">
-              <a href="<%= longURL %>">
-              <% if (res === null) { %>
-                <%= longURL %>
-              <% } else { %>
-                <%= longURL.substring(res[0].length) %>
-              <% } %>
-              </a>
-            </td>
-            <td class="align-middle text-center"><a href="/urls/<%= shortURL %>">Edit</a></td>
-            <td class="align-middle text-center">
-              <form method="POST" action="/urls/<%= url %>/delete">
-                <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-              </form>
-            </td>
-          </tr>
-        <% } %>
-      </tbody>
-    </table>
+  <main>
+    <div class="card">
+      <div class="card-header">
+        <div class="my-2"> 
+          <h4 class="display-4 text-center mb-2"><strong>Behold!</strong></h4>
+          <p class="lead text-center mb-0"><strong>Thine treasured URLs, and their trimmed counterparts.</strong></p>
+        </div>
+      </div>
+      <div class="card-body mt-3 mx-4">
+        <table class="table table-bordered table-hover">
+          <caption>Shortened URLs and their corresponding long URLs.</caption>
+          <colgroup>
+          <thead class="thead-dark">
+            <tr class="text-center">
+              <th class="col-3" scope="col">Short URL</th>
+              <th class="col-5" scope="col">Long URL</th>
+              <th class="col-2" scope="col">Edit</th>
+              <th class="col-2" scope="col"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% const regex = new RegExp('(https?|):\/\/(w{3}?.|)') %>
+            <% for(const url of urls) { %>
+              <% const shortURL = url[0] %> 
+              <% const longURL = url[1]['longURL'] %>
+              <% const res = regex.exec(longURL) %>
+              <tr>
+                <td class="align-middle">
+                  <a href="http://localhost:8080/u/i3BoGr">
+                    <span class="ml-3" style="display:block; text-decoration:none; color:darkgray">localhost:8080/u/ <span style="color:rgb(33,37,41)"><strong> <%= shortURL %></strong></span></span>
+                  </a>
+                </td>
+                <td class="align-middle text-center">
+                  <a href="<%= longURL %>">
+                  <% if (res === null) { %>
+                    <%= longURL %>
+                  <% } else { %>
+                    <%= longURL.substring(res[0].length) %>
+                  <% } %>
+                  </a>
+                </td>
+                <td class="align-middle text-center"><a href="/urls/<%= shortURL %>">Edit</a></td>
+                <td class="align-middle text-center">
+                  <form method="POST" action="/urls/<%= shortURL %>/delete">
+                    <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                  </form>
+                </td>
+              </tr>
+            <% } %>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
