--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -13,12 +13,18 @@
   <body>
 
     <%- include('partials/_header') %>
-
+    
     <main style="margin: 1em;">
-      <h3>Create TinyURL</h3>
-      <form class="form-inline" action="/urls" method="POST">
-        <%- include('partials/_longURLForm') %>
-      </form>
+      <div class="card">
+        <div class="card-header">
+          <h4 class="display-4 text-center">Create TinyURL</h4>
+        </div>
+        <div class="card-body row justify-content-center">
+          <form class="form-inline" action="/urls" method="POST">
+            <%- include('partials/_longURLForm') %>
+          </form>
+        </div>
+      </div>
     </main>
       <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
