--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -9,14 +9,18 @@
 <body>
   <%- include('partials/_header') %>
   <div class="card text-center">
-      <div class="card-header"></div>
+      <div class="card-header">
+        <div class="my-1">
+          <h4 class="card-title display-4">TinyURL <a class="ml-2" href="/u/<%= shortURL %>"><%= shortURL %></a>
+          </h4>
+        </div>
+      </div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+        <span class="lead" style=>Shortens: <%= longURL %></span>
       </div>
     <div class="card-footer text-muted">
       <div class="container">
-        <h3>Edit</h5>
+        <h3 class="mt-1 mb-0">Edit</h3>
         <div class="row justify-content-center">
           <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
             <%- include('partials/_longURLForm') %>
