--- a/views/partials/_longURLForm.ejs
+++ b/views/partials/_longURLForm.ejs
@@ -1,13 +1,21 @@
-<div class="form-group">
+<form class="mt-2 mb-4" style="width:35%;min-width:fit-content" action="/urls
+<% if (typeof(shortURL) !== 'undefined') {%>
+/<%= shortURL  %>
+<% } %>" method="POST">
   
-
   <% if (typeof(longURL) === 'undefined') { %>
-    <input class="form-control text-center" type="text" name="longURL" value="http://" style="width: 300px; margin: 1em">
-    <button type="submit" class="btn btn-primary">Shorten</button>
-  <% } else { %>          
-    <input class="form-control text-center" type="text" name="longURL" value="<%= longURL %>" style="width: 300px; margin: 1em">
-    <div class="">
-      <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="input-group">
+      <input class="form-control text-center" type="text" name="longURL" value="http://" style="width: 300px">
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary" type="submit">Shorten</button>
+      </div>
     </div>
+  <% } else { %>
+    <div class="input-group">
+      <input class="form-control text-center" type="text" name="longURL" placeholder="<%= longURL %>" style="width: 300px">
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary" type="submit">Update</button>
+      </div>
+    </div>         
   <% } %>
-</div>
+</form>
