--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
 <body>
   <main>
     <%- include('partials/_header') %>
-    <div class="card">
+    <div class="card mx-auto" style="min-width:28rem;max-width:60%;">
       <div class="card-header">
         <legend class="display-4 my-2 text-center">Log in to your account</legend>
       </div>
