--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -11,35 +11,37 @@
 <body>
   <%- include('partials/_header') %>
   <main>
-    <div class="card">
+    <div class="card mx-4">
       <div class="card-header">
         <div class="my-2"> 
           <h4 class="display-4 text-center mb-2"><strong>Behold!</strong></h4>
           <p class="lead text-center mb-0"><strong>Thine treasured URLs, and their trimmed counterparts.</strong></p>
         </div>
       </div>
-      <div class="card-body mt-3 mx-4">
+      <div class="card-body mt-3 mx-5 px-0">
         <table class="table table-bordered table-hover">
           <caption>Shortened URLs and their corresponding long URLs.</caption>
           <colgroup>
           <thead class="thead-dark">
             <tr class="text-center">
-              <th class="col-3" scope="col">Short URL</th>
-              <th class="col-5" scope="col">Long URL</th>
-              <th class="col-2" scope="col">Edit</th>
-              <th class="col-2" scope="col"></th>
+              <th scope="col">Short URL</th>
+              <th scope="col">Long URL</th>
+              <th scope="col">Date created</th>
+              <th scope="col">Edit</th>
+              <th scope="col">Delete</th>
             </tr>
           </thead>
           <tbody>
             <% const regex = new RegExp('(https?|):\/\/(w{3}?.|)') %>
-            <% for(const url of urls) { %>
+            <% for (const url of urls) { %>
               <% const shortURL = url[0] %> 
               <% const longURL = url[1]['longURL'] %>
+              <% const date = url[1]['creationDate'] %>
               <% const res = regex.exec(longURL) %>
               <tr>
                 <td class="align-middle">
                   <a href="http://localhost:8080/u/i3BoGr">
-                    <span class="ml-3" style="display:block; text-decoration:none; color:darkgray">localhost:8080/u/ <span style="color:rgb(33,37,41)"><strong> <%= shortURL %></strong></span></span>
+                    <span class="ml-3" style="text-decoration:none; color:darkgray">bit.ly/ <span style="color:rgb(33,37,41)"><strong> <%= shortURL %></strong></span></span>
                   </a>
                 </td>
                 <td class="align-middle text-center">
@@ -51,10 +53,15 @@
                   <% } %>
                   </a>
                 </td>
-                <td class="align-middle text-center"><a href="/urls/<%= shortURL %>">Edit</a></td>
+                <td class="align-middle text-center"><%= date %></td>
+                <td class="align-middle text-center">
+                  <a class="btn btn-outline-warning btn-sm btn-block" href="/urls/<%= shortURL %>">
+                    Edit <%= shortURL %>
+                  </a>
+                </td>
                 <td class="align-middle text-center">
                   <form method="POST" action="/urls/<%= shortURL %>/delete">
-                    <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                    <button type="submit" class="btn btn-outline-danger btn-sm btn-block">Delete <%= shortURL %></button>
                   </form>
                 </td>
               </tr>
