working solution for data persistence

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -17,7 +17,7 @@
         <p class="lead"><%= errorMsg %></p>
       </div>
       <div class="text-center mb-5">
-        <img src="/resources/error-icon.png" alt="Error icon" width="160">
+        <img src="/src/error-icon.png" alt="Error icon" width="200">
       </div>
     </div>
   </main>
