all good things

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="card-body mt-3 mx-5 px-0">
-        <table class="table table-bordered table-hover">
+        <table class="table table-bordered table-hover table-striped">
           <caption>Shortened URLs and their corresponding long URLs.</caption>
           <colgroup>
           <thead class="thead-dark">
@@ -28,6 +28,7 @@
               <th scope="col">Long URL</th>
               <th scope="col">Date created</th>
               <th scope="col">Visits</th>
+              <th scope="col">Unique Visitors</th>
               <th scope="col">Edit</th>
               <th scope="col">Delete</th>
             </tr>
@@ -39,6 +40,7 @@
               <% const longURL = url[1]['longURL'] %>
               <% const date = url[1]['creationDate'] %>
               <% const visits = url[1]['visits'] %>
+              <% const uniqueVisitors = url[1]['uniqueUsers'].length %>
               <% const res = regex.exec(longURL) %>
               <tr>
                 <td class="align-middle">
@@ -57,6 +59,7 @@
                 </td>
                 <td class="align-middle text-center"><%= date %></td>
                 <td class="align-middle text-center"><%= visits.toLocaleString() %></td>
+                <td class="align-middle text-center"><%= uniqueVisitors %></td>
                 <td class="align-middle text-center">
                   <a class="btn btn-outline-warning btn-sm btn-block" href="/urls/<%= shortURL %>">
                     Edit <%= shortURL %>
