--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
   <main>
     <%- include('partials/_header') %>
     <div class="card mx-auto" style="min-width:28rem;max-width:60%;">
-      <div class="card-header">
+      <div class="card-header" style="background:#E3E2DF">
         <legend class="display-3 my-2 text-center">Log in to your account</legend>
       </div>
       <div class="card-body">
@@ -38,7 +38,7 @@
                 </div>
               </div>
               <div class="row justify-content-center">
-                <button type="submit" class="btn btn-primary" style="margin: 1em">Submit</button>
+                <button type="submit" class="btn btn-outline" style="margin:1em;background-color:#9A1750;color:white">Submit</button>
               </div>
             </fieldset>
           </form>
