--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <header class="mb-5" style="box-shadow: 0 1rem 0.9rem grey">
-  <nav class="navbar navbar-expand-md navbar-dark bg-success py-3" style="font-size:1.2rem">
+  <nav class="navbar navbar-expand-md navbar-dark py-3" style="font-size:1.2rem;background:#9A1750">
     <a class="navbar-brand py-0 pl-2 pr-4 border-right" href="/urls" style="font-size:1.8rem">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
