--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,76 +1,69 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <title>TinyApp</title>
-</head>
+<%- include('partials/_head') %>
 <body>
   <%- include('partials/_header') %>
   <main>
     <div class="card mx-4">
-      <div class="card-header">
+      <div class="card-header" style="background:#E3E2DF">
         <div class="my-2"> 
           <h4 class="display-4 text-center mb-2"><strong>Behold!</strong></h4>
           <p class="lead text-center mb-0"><strong>Thine treasured URLs, and their trimmed counterparts.</strong></p>
         </div>
       </div>
-      <div class="card-body mt-3 mx-5 px-0">
-        <table class="table table-bordered table-hover">
-          <caption>Shortened URLs and their corresponding long URLs.</caption>
-          <colgroup>
-          <thead class="thead-dark">
-            <tr class="text-center">
-              <th scope="col">Short URL</th>
-              <th scope="col">Long URL</th>
-              <th scope="col">Date created</th>
-              <th scope="col">Visits</th>
-              <th scope="col">Edit</th>
-              <th scope="col">Delete</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% const regex = new RegExp('(https?|):\/\/(w{3}?.|)') %>
-            <% for (const url of urls) { %>
-              <% const shortURL = url[0] %> 
-              <% const longURL = url[1]['longURL'] %>
-              <% const date = url[1]['creationDate'] %>
-              <% const visits = url[1]['visits'] %>
-              <% const res = regex.exec(longURL) %>
-              <tr>
-                <td class="align-middle">
-                  <a href="http://localhost:8080/u/i3BoGr">
-                    <span class="ml-3" style="text-decoration:none; color:darkgray">bit.ly/ <span style="color:rgb(33,37,41)"><strong> <%= shortURL %></strong></span></span>
-                  </a>
-                </td>
-                <td class="align-middle text-center">
-                  <a href="<%= longURL %>">
-                  <% if (res === null) { %>
-                    <%= longURL %>
-                  <% } else { %>
-                    <%= longURL.substring(res[0].length) %>
-                  <% } %>
-                  </a>
-                </td>
-                <td class="align-middle text-center"><%= date %></td>
-                <td class="align-middle text-center"><%= visits.toLocaleString() %></td>
-                <td class="align-middle text-center">
-                  <a class="btn btn-outline-warning btn-sm btn-block" href="/urls/<%= shortURL %>">
-                    Edit <%= shortURL %>
-                  </a>
-                </td>
-                <td class="align-middle text-center">
-                  <form method="POST" action="/urls/<%= shortURL %>/delete">
-                    <button type="submit" class="btn btn-outline-danger btn-sm btn-block">Delete <%= shortURL %></button>
-                  </form>
-                </td>
+      <div>
+        <div class="card-body mt-3 mx-5 px-0">
+          <table class="table table-bordered table-hover">
+            <caption>Shortened URLs and their corresponding long URLs.</caption>
+            <colgroup>
+            <thead class="thead-dark">
+              <tr class="text-center">
+                <th scope="col">Short URL</th>
+                <th scope="col">Long URL</th>
+                <th scope="col">Date created</th>
+                <th scope="col">Visits</th>
+                <th scope="col">Edit</th>
+                <th scope="col">Delete</th>
               </tr>
-            <% } %>
-          </tbody>
-        </table>
+            </thead>
+            <tbody>
+              <% const regex = new RegExp('(https?|):\/\/(w{3}?.|)') %>
+              <% for (const url of urls) { %>
+                <% const shortURL = url[0] %> 
+                <% const longURL = url[1]['longURL'] %>
+                <% const date = url[1]['creationDate'] %>
+                <% const visits = url[1]['visits'] %>
+                <% const res = regex.exec(longURL) %>
+                <tr>
+                  <td class="align-middle">
+                    <a href="http://localhost:8080/u/i3BoGr">
+                      <span class="ml-3" style="text-decoration:none; color:darkgray">bit.ly/ <span style="color:rgb(33,37,41)"><strong> <%= shortURL %></strong></span></span>
+                    </a>
+                  </td>
+                  <td class="align-middle text-center">
+                    <a href="<%= longURL %>">
+                    <% if (res === null) { %>
+                      <%= longURL %>
+                    <% } else { %>
+                      <%= longURL.substring(res[0].length) %>
+                    <% } %>
+                    </a>
+                  </td>
+                  <td class="align-middle text-center"><%= date %></td>
+                  <td class="align-middle text-center"><%= visits.toLocaleString() %></td>
+                  <td class="align-middle text-center">
+                    <a class="btn btn-outline-info btn-sm btn-block" href="/urls/<%= shortURL %>">
+                      Edit <%= shortURL %>
+                    </a>
+                  </td>
+                  <td class="align-middle text-center">
+                    <form method="POST" action="/urls/<%= shortURL %>/delete">
+                      <button type="submit" class="btn btn-outline-danger btn-sm btn-block">Delete <%= shortURL %></button>
+                    </form>
+                  </td>
+                </tr>
+              <% } %>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </main>
