--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <title>URL - TinyApp Example</title>
-</head>
+<%- include('partials/_head') %>
 
 <body>
   <%- include('partials/_header') %>
   <div class="card mx-auto text-center" style="min-width:28rem;max-width:60%;">
-      <div class="card-header">
+      <div class="card-header" style="background:#E3E2DF">
         <div class="my-1 mx-2">
           <h3 class="card-title display-3">TinyURL <a class="ml-2" href="/u/<%= shortURL %>"><%= shortURL %></a></h3>
         </div>
@@ -27,12 +21,18 @@
             <div class="card">
               <div class="card-body">
                 <div class="pb-3 border-bottom">
-                  <h5 class="card-title">Created</h5>
+                  <h5 class="card-title mb-0">Created</h5>
                   <p class="card-text"><%= creationDate %></p>
                 </div>
-                <div class="mt-3">
-                  <h5 class="card-title">Visits</h5>
-                  <p class="card-text"><%= visits.toLocaleString() %></p>
+                <div class="mt-3 d-flex justify-content-around row">
+                  <div class="col-6 border-right">
+                    <h5 class="card-title mb-0">Visits</h5>
+                    <p class="card-text"><%= visits.toLocaleString() %></p>
+                  </div>
+                  <div class="col-6">
+                    <h5 class="card-title mb-0">Unique Visits</h5>
+                    <p class="card-text"><%= uniqueUsers.length %></p>
+                  </div>
                 </div>
               </div>
             </div>
